--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     </div>
     <!-- END COUNTDOWN -->
 
-    <!-- Ruang section -->
+    <!-- Reviews section -->
     <section id="reviews" class="speakers w-full h-full bg-midnight overflow-hidden pt-20">
       <div class="flex items-center p-10 flex-col isolate">
         <p
           class="speakers-title text-white font-righteous font-normal text-[calc(28px+1.3vw)] relative mb-10"
         >
-          Ruang Lingkup Audit
+          Reviews
         </p>
         <div class="shadow-top-down w-[calc(150px+60vw)] max-h-[570px] relative">
           <div class="shadow-top-down w-[calc(150px+60vw)] max-h-[570px] relative">
@@ -124,9 +124,12 @@
                     <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
                         <dt class="question">
                             <div class="text-white font-normal text-lg lg:text-2xl">
-                              <h1 class="font-righteous mt-1 text-1xl">Level 1 : General Vulnerability Scanning</h1>
-							  Di tahapan ini informasi dikumpulkan sebanyak-banyaknya, kemudian mengidentifikasi semua kelemahan yang mungkin ada dan memverifikasi kelemahan/vulnerability tersebut."
+                              "I really enjoyed attending each of InfoSec Week conferences. The speakers had been able, each in his field, to present their subjects and answer the participants' questions."
                             </div>
+                            <div class="flex justify-end mt-5 mb-3">
+                              <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
+                               - Ahmed Mokeddem
+                              </div>
                           </div>
                         </dt>
                     </div>
@@ -136,9 +139,12 @@
                   <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
                       <dt class="question">
                           <div class="text-white font-normal text-lg lg:text-2xl">
-                            <h1 class="font-righteous mt-1 text-1xl">Level 2 : Penetration Testing</h1>
-							Audit ini meliputi seluruh tahapan yang ada di level 1 ditambah beberapa proses lagi. Dari hasil yang didapat dari audit level 1, kami akan melakukan penetrasi untuk membuktikan bahwa kelemahan tersebut valid dan kami berikan PoC (Proof of Concept). Keuntungan dari audit level 2 adalah klien akan mendapatkan informasi keamanan yang lebih rinci dan realistis
+                            "The last year edition was a great opportunity to level up my cybersecurity knowledge and get to know better what is new in the field. The conferences were very detailed and simple to understand even for me ! Thank you Shellmates for this event !"
                           </div>
+                          <div class="flex justify-end mt-5 mb-3">
+                            <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
+                             - Walid Berrouk
+                            </div>
                         </div>
                       </dt>
                   </div>
@@ -148,12 +154,32 @@
                 <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
                     <dt class="question">
                         <div class="text-white font-normal text-lg lg:text-2xl">
-						<h1 class="font-righteous mt-1 text-1xl">Level 3: Full Penetration Testing</h1>
-						Audit ini mengcover seluruh tahapan yang ada di level 2 ditambah beberapa proses lagi pada bagian penetration testing. Dari hasil yang diperoleh dari audit level 2, maka dilaksanakan aktivitas eksploitasi lebih lanjut. Keuntungan dari audit level 3 adalah audit ini dapat membantu memvalidasi security policy perusahaan anda.
+                          "The first and only edition of InfoSec Week was a great refreshing experience for the algerian cybersecurity community, the conferences held were not only varied enough to touch on different cybersecurity fields, but they were also animated by certified cybersecurity professionals who definitely know their craft."
                         </div>
+                        <div class="flex justify-end mt-5 mb-3">
+                          <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
+                           - Laid Malik Mabrouki
+                          </div>
+                      </div>
                     </dt>
                 </div>
             </div>
+
+            <div class="lg:w-full">
+              <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
+                  <dt class="question">
+                      <div class="text-white font-normal text-lg lg:text-2xl">
+                        "InfoSec Week was an amazing event where i had the chance to get various cybersecurity topics covered with great tutors who shared their whole experience with us and answered all of our questions, it was definitely a great time investment !"
+                      </div>
+                      <div class="flex justify-end mt-5 mb-3">
+                        <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
+                         - Nada Boutaoui
+                        </div>
+                    </div>
+                  </dt>
+              </div>
+          </div>
+
 
               </dl>
 
@@ -161,7 +187,7 @@
           </div>
         </div>
       </section>
-      <!-- Ruang section -->
+      <!-- END SPEAKERS -->
 
 
     <!-- Contact Form -->
