--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     </div>
     <!-- END COUNTDOWN -->
 
-    <!-- Reviews section -->
+    <!-- RUANG FIRST -->
     <section id="reviews" class="speakers w-full h-full bg-midnight overflow-hidden pt-20">
       <div class="flex items-center p-10 flex-col isolate">
         <p
           class="speakers-title text-white font-righteous font-normal text-[calc(28px+1.3vw)] relative mb-10"
         >
-          Reviews
+          Ruang Lingkup Audit
         </p>
         <div class="shadow-top-down w-[calc(150px+60vw)] max-h-[570px] relative">
           <div class="shadow-top-down w-[calc(150px+60vw)] max-h-[570px] relative">
@@ -124,11 +124,11 @@
                     <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
                         <dt class="question">
                             <div class="text-white font-normal text-lg lg:text-2xl">
-                              "I really enjoyed attending each of InfoSec Week conferences. The speakers had been able, each in his field, to present their subjects and answer the participants' questions."
+                              Di tahapan ini informasi dikumpulkan sebanyak-banyaknya, kemudian mengidentifikasi semua kelemahan yang mungkin ada dan memverifikasi kelemahan/vulnerability tersebut.
                             </div>
                             <div class="flex justify-end mt-5 mb-3">
                               <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
-                               - Ahmed Mokeddem
+                               - Level 1 : General Vulnerability Scanning
                               </div>
                           </div>
                         </dt>
@@ -139,11 +139,11 @@
                   <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
                       <dt class="question">
                           <div class="text-white font-normal text-lg lg:text-2xl">
-                            "The last year edition was a great opportunity to level up my cybersecurity knowledge and get to know better what is new in the field. The conferences were very detailed and simple to understand even for me ! Thank you Shellmates for this event !"
+                            Audit ini meliputi seluruh tahapan yang ada di level 1 ditambah beberapa proses lagi. Dari hasil yang didapat dari audit level 1, kami akan melakukan penetrasi untuk membuktikan bahwa kelemahan tersebut valid dan kami berikan PoC (Proof of Concept). Keuntungan dari audit level 2 adalah klien akan mendapatkan informasi keamanan yang lebih rinci dan realistis
                           </div>
                           <div class="flex justify-end mt-5 mb-3">
                             <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
-                             - Walid Berrouk
+                             - Level 2 : Penetration Testing
                             </div>
                         </div>
                       </dt>
@@ -154,32 +154,16 @@
                 <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
                     <dt class="question">
                         <div class="text-white font-normal text-lg lg:text-2xl">
-                          "The first and only edition of InfoSec Week was a great refreshing experience for the algerian cybersecurity community, the conferences held were not only varied enough to touch on different cybersecurity fields, but they were also animated by certified cybersecurity professionals who definitely know their craft."
+                          Audit ini mengcover seluruh tahapan yang ada di level 2 ditambah beberapa proses lagi pada bagian penetration testing. Dari hasil yang diperoleh dari audit level 2, maka dilaksanakan aktivitas eksploitasi lebih lanjut. Keuntungan dari audit level 3 adalah audit ini dapat membantu memvalidasi security policy perusahaan anda.
                         </div>
                         <div class="flex justify-end mt-5 mb-3">
                           <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
-                           - Laid Malik Mabrouki
+                           - Level 3: Full Penetration Testing
                           </div>
                       </div>
                     </dt>
                 </div>
             </div>
-
-            <div class="lg:w-full">
-              <div class="question-and-answer select-none cursor-pointer border-b mx-8 my-3 pr-6 py-4 text-sm group">
-                  <dt class="question">
-                      <div class="text-white font-normal text-lg lg:text-2xl">
-                        "InfoSec Week was an amazing event where i had the chance to get various cybersecurity topics covered with great tutors who shared their whole experience with us and answered all of our questions, it was definitely a great time investment !"
-                      </div>
-                      <div class="flex justify-end mt-5 mb-3">
-                        <div class="text-[#A3770D] font-bold text-lg lg:text-xl">
-                         - Nada Boutaoui
-                        </div>
-                    </div>
-                  </dt>
-              </div>
-          </div>
-
 
               </dl>
 
@@ -187,7 +171,7 @@
           </div>
         </div>
       </section>
-      <!-- END SPEAKERS -->
+      <!-- RUANG END -->
 
 
     <!-- Contact Form -->
